# src/main/java/ru/ifmo/puls/presentation/controller/UserController.java
@@ -4,22 +4,16 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.blps.openapi.api.UserApi;
-import ru.blps.openapi.model.UserInfoResponseTo;
-import ru.ifmo.puls.auth.model.User;
-import ru.ifmo.puls.auth.service.UserService;
+import ru.blps.openapi.model.UserStatsResponseTo;
+import ru.ifmo.puls.service.UserStatsService;
 
 @RestController
 @RequiredArgsConstructor
 public class UserController implements UserApi {
-    private final UserService userService;
+    private final UserStatsService userStatsService;
 
     @Override
-    public ResponseEntity<UserInfoResponseTo> getMeInfo() {
-        return ResponseEntity.ok(transform(userService.getCurrentUser()));
-    }
-
-    private UserInfoResponseTo transform(User user) {
-        return new UserInfoResponseTo()
-                .login(user.getUsername());
+    public ResponseEntity<UserStatsResponseTo> getUserStats(Long id) {
+        return ResponseEntity.ok(userStatsService.getUserStats(id));
     }
 }
