# src/main/resources/api.yaml
@@ -324,3 +324,17 @@ paths:
       responses:
         200:
           description: OK
+
+  /user/stats/{id}:
+    get:
+      operationId: getUserStats
+      tags: [ user ]
+      parameters:
+        - $ref: 'parameters.yaml#/components/parameters/idPathParam'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas.yaml#/components/schemas/UserStatsResponseTo'
